<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android" >
    <ScrollView
        android:layout_width="wrap_content"
        android:layout_height="match_parent">
        <android.support.constraint.ConstraintLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent">

            <Button
                android:id="@+id/btnCancel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="24dp"
                android:layout_marginStart="16dp"
                android:text="Cancel"
                app:layout_constraintBottom_toBottomOf="@+id/label"
                app:layout_constraintEnd_toStartOf="@+id/label"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@+id/label" />

            <Button
                android:id="@+id/btnSave"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="16dp"
                android:layout_marginStart="24dp"
                android:text="Save"
                app:layout_constraintBottom_toBottomOf="@+id/label"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/label"
                app:layout_constraintTop_toTopOf="@+id/label" />

            <TextView
                android:id="@+id/label"
                android:layout_width="180dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="32dp"
                android:textAlignment="center"
                android:textSize="14sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <View
                android:id="@+id/view"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginTop="80dp"
                android:background="@android:color/darker_gray"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/textView2"
                android:layout_width="wrap_content"
                android:layout_height="19dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="24dp"
                android:text="Quantity"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/view" />

            <Button
                android:id="@+id/btnDecrease"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="32dp"
                android:text="-"
                app:layout_constraintBottom_toBottomOf="@+id/quantity"
                app:layout_constraintStart_toEndOf="@+id/quantity"
                app:layout_constraintTop_toTopOf="@+id/quantity" />

            <Button
                android:id="@+id/btnIncrease"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:text="+"
                app:layout_constraintBottom_toBottomOf="@+id/btnDecrease"
                app:layout_constraintStart_toEndOf="@+id/btnDecrease"
                app:layout_constraintTop_toTopOf="@+id/btnDecrease" />

            <TextView
                android:id="@+id/textView4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="82dp"
                android:text="Discount"
                app:layout_constraintEnd_toEndOf="@+id/textView2"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="@+id/textView2"
                app:layout_constraintTop_toBottomOf="@+id/textView2" />

            <Switch
                android:id="@+id/discountA"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="Discount A (0%)"
                app:layout_constraintEnd_toEndOf="@+id/textView4"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="@+id/textView4"
                app:layout_constraintTop_toBottomOf="@+id/textView4" />

            <Switch
                android:id="@+id/discountB"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:text="Discount B (10%)"
                app:layout_constraintBottom_toBottomOf="@+id/discountA"
                app:layout_constraintStart_toEndOf="@+id/discountA"
                app:layout_constraintTop_toTopOf="@+id/discountA" />

            <Switch
                android:id="@+id/discountC"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:text="Discount C (35.5%)"
                app:layout_constraintBottom_toBottomOf="@+id/discountB"
                app:layout_constraintStart_toEndOf="@+id/discountB"
                app:layout_constraintTop_toTopOf="@+id/discountB" />

            <Switch
                android:id="@+id/discountD"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                android:layout_marginTop="8dp"
                android:text="Discount D (50%)"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="@+id/discountA"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="@+id/discountA"
                app:layout_constraintTop_toBottomOf="@+id/discountA" />

            <Switch
                android:id="@+id/discountE"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:text="Discount E (100%)"
                app:layout_constraintBottom_toBottomOf="@+id/discountD"
                app:layout_constraintStart_toEndOf="@+id/discountD"
                app:layout_constraintTop_toTopOf="@+id/discountD" />

            <EditText
                android:id="@+id/quantity"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:ems="10"
                android:inputType="number"
                android:text="1"
                app:layout_constraintEnd_toEndOf="@+id/textView2"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="@+id/textView2"
                app:layout_constraintTop_toBottomOf="@+id/textView2" />
        </android.support.constraint.ConstraintLayout>
    </ScrollView>
</layout>
