<resources>
    <string name="app_name">POS</string>
    <string name="library">Library</string>
    <string name="all_discounts">All Discounts</string>
    <string name="all_items">All Items</string>
</resources>
