...
            android:layout_height="wrap_content"
            android:background="@android:color/darker_gray"
            android:textAlignment="center"
            android:textColor="@android:color/white"
            android:textSize="18sp"
            android:text="Shopping Cart"
            app:layout_constraintBottom_toTopOf="@+id/shopping_cart_list"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <android.support.v7.widget.RecyclerView
            android:id="@+id/shopping_cart_list"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginBottom="8dp"
            app:layoutManager="LinearLayoutManager"
            app:layout_constraintBottom_toTopOf="@+id/clear_button"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/frame_name"
            tools:listitem="@layout/fragment_library_item" />

        <Button
...
